# bill-splitter

./: .env  .gitignore  Makefile  docker-compose.dev.yml  docker-compose.yml
database/scripts/: 01-users-table.sql  02-contacts-service.sql  03-bill-service.sql
frontend/mobile/: App.js  Dockerfile  app.json  package.json
frontend/mobile/src/components/: EventCard.js
frontend/mobile/src/navigation/: AppNavigator.js
frontend/mobile/src/screens/: HomeScreen.js  LoginScreen.js  RegisterScreen.js
frontend/mobile/src/screens/balance/: BalanceScreen.js
frontend/mobile/src/screens/events/: CreateEventScreen.js  EventDetailsScreen.js  EventsListScreen.js
frontend/mobile/src/screens/expenses/: AddExpenseScreen.js
frontend/mobile/src/screens/profile/: ProfileScreen.js
frontend/mobile/src/services/: apiService.js  authService.js
services/api-gateway/: Dockerfile  package.json
services/api-gateway/src/: index.js
services/auth-service/: package.json
services/auth-service/src/: index.js
services/bill-service/: CMakeLists.txt  Dockerfile
services/bill-service/src/: auth_middleware.cpp  auth_middleware.h  database.cpp  database.h  events_controller.cpp  events_controller.h  expenses_controller.cpp  expenses_controller.h  main.cpp  participants_controller.cpp  participants_controller.h  redis_client.cpp  redis_client.h  settlements_controller.cpp  settlements_controller.h  split_calculator.cpp  split_calculator.h  utils.cpp  utils.h
services/contacts-service/: Dockerfile  package.json
services/contacts-service/src/: index.js
(+1 files in other folders)
